--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Login</title>
     <link rel="stylesheet" href="estilo/sstyle.css">
+    <link rel="stylesheet" href="estilos/query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -16,8 +18,21 @@
                 <p>
                     Seja bemn vindo(a)novamente. Faça seu login para acessar as configurações do seu ambiente
                 </p>
-                <form action="login.php" method="post"> 
-
+                <form action="login.php" method="post" autocomplete="on"> 
+                    <div class="campo">
+                        <i class="material-icons">person</i>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="20">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                            <i class="material-icons">vpn_key</i>
+                                <input type="password" name="Senha" id="isenha" placeholder="Sua senha" autocomplete="current-password">
+                                <label for="isenha">Senha</label>
+                        </div>
+                        <input type="submit" value="Entrar">
+                        <a href="esqueci.html">
+                            esqueci a senha <i class="material-icons">mail</i>
+                        </a>
                 </form>
             </div>
         </section>
